--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -219,7 +219,7 @@ For the front-end and system testing, we will be using PlayWright to conduct aut
 and with seperate contexts. This will help ensure the compatability of the system across environments. This will support not only front end testing, but automation of system testing. When the front end actions
 are triggered, the python backend can be evoked.
 
-We will keep track of lines of code, branches, and requirements covered by our automated tests to provide metrics of test coverage.
+We will keep track of lines of code, branches, and requirements covered by our automated tests to provide metrics of test coverage. We will consider using Coverage.py to keep track of the lines of Python code run and codecov for Javascript/typescript. 
 \subsubsection{Deployment}
 Depending on how we decided to host our server, we will also investigate if it would be beneficial to develop a continuous deployment workflow when changes are 
 pushed to the main branch. This will be determined in the future when our requirements are more clear.
